--- a/src/happiest-full.jade
+++ b/src/happiest-full.jade
@@ -11,19 +11,9 @@ body
 
     article.main-article
       .content
-        include ./partials/featured-cards.jade
 
-        include ./partials/upper.jade
-
-        include ./partials/grumpiest.jade
-
-        include ./partials/happiest.jade
-
-        include ./partials/methodology.jade
-
-        include ./partials/related.jade
+        include ./partials/happiest-table.jade
 
     include ./partials/footer.jade
 
-  script(type='text/javascript', src='js/script.min.js')
-
+  script(inline='', src='js/script.min.js')
