--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -160,6 +160,9 @@
       .under-title
         margin-bottom: 32px
 
+  .graph__wrapper
+    border: 1px solid transparent
+
   .small-img
     right: 25px
     bottom: 36px
@@ -181,6 +184,7 @@
 
   .info-text
     width: 690px
+    display: none
 
   .rankings__wrapper
     width: 620px
@@ -292,6 +296,25 @@
     padding-left: 0
     padding-right: 0
 
+  .intro-img
+    height: auto
+
+  .main-img
+    width: 100%
+    max-width: 100%
+    height: auto
+
+  .small-img
+    width: 30%
+    border-radius: 50%
+    box-shadow: 0px 6px 32px 0 #E9EAEA
+    right: 17px
+    bottom: -12px
+
+  .metrics__list-item
+    &:before
+      top: 3px
+
   .upper-pic
     position: static
     width: 250px
@@ -300,10 +323,6 @@
 
   .under-title
     padding-left: 0
-
-  .small-img
-    right: 68px
-    bottom: 28px
 
   .rankings__wrapper
     width: calc(100% - 24px)
