--- a/src/grumpy-full.jade
+++ b/src/grumpy-full.jade
@@ -12,7 +12,7 @@ body
     article.main-article
       .content
 
-        include ./partials/happiest-table.jade
+        include ./partials/grumpy-table.jade
 
     include ./partials/footer.jade
 
