--- a/src/partials/grumpy-table.jade
+++ b/src/partials/grumpy-table.jade
@@ -1,20 +1,23 @@
-include ./happy-data
+include ./grumpy-data
 
-.text-box.text-box--table.text-box--h-table
+.text-box.text-box--table.text-box--g-table
   .breadcrumbs__wrap
     .breadcrumbs__item
       a.breadcrumbs__link(href='')
         | Home
+
     .breadcrumbs__item
       a.breadcrumbs__link(href='')
         | Reports
+
     .breadcrumbs__item
       a.breadcrumbs__link(href='')
         | The Best and Worst Financial Institutions
+
     .breadcrumbs__item
       | Which U.S. States Are Home to the Grumpiest and Happiest Travelers?
 
-  h2.block-title Full Happiest Ranking
+  h2.block-title Full Ranking
 
   .tables-container
     .mobile-only
@@ -38,12 +41,14 @@ include ./happy-data
           tr
             th Bank
             th State
-            th GrumpIndex Score
-            th # of Bad Reviews
-            th % Negative Reviews
-            th Average Rating
+            th Total Reviews
+            th Grumpy Reviews
             th %Grumpy
-            th.cell-with-icon Average Review
+            th % Not Grumpy
+            th Average Review
+            th Review Percentile
+            th Grumpy Percentile
+            th GrumpIndex Score
 
         tbody
           each value in values
@@ -55,24 +60,31 @@ include ./happy-data
                 = value.state
 
               td
-                p.rate-block
-                  = value.score
+                = value.totalReviews
 
               td
-                = value.badReviews
-
-              td
-                = value.negativeReviews
-
-              td
-                = value.averageRating
+                = value.grumpyReviews
 
               td
                 = value.grumpy
 
               td
+                = value.notGrumpy
+
+              td
                 = value.averageReview
+
+              td
+                = value.reviewPercentile
+
+              td
+                = value.grumpyPercentile
+
+              td
+                p.rate-block
+                  = value.grumpIndexScore
 
   .btn-container
     a.btn-go-back(href="index.html")
       | GO BACK TO THE FULL STUDY
+
