--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -76,6 +76,9 @@
     background-position center
     padding: 32px 45px 45px 25px
 
+  .main-pic__mask
+    background: linear-gradient(-179deg, rgba(0,0,0,0.00) 2%, rgba(1,4,5,0.21) 35%, #05131A 100%)
+
   .text-box
     padding: 45px
     &--upper
@@ -144,6 +147,7 @@
 
   .main-pic__mask
     height: 568px
+    background: linear-gradient(-179deg, rgba(0,0,0,0.00) 2%, rgba(1,4,5,0.21) 35%, #05131A 100%)
 
   .top-menu__link
     margin: 0 10px
@@ -191,6 +195,10 @@
 
   .rankings__item-text
     width: 540px
+
+  .graph__wrapper
+    margin-left: 25px
+    margin-right: 25px
 
   .related-head
     padding: 0 20px
@@ -266,11 +274,12 @@
       margin-botoom: 0
 
   .main-pic
-    height: 345px
+    height: 454px
     padding: 16px 12px 36px 12px
 
   .main-pic__mask
     height: 270px
+    background: linear-gradient(-179deg, rgba(0,0,0,0.00) 25%, rgba(1,4,5,0.90) 51%, #05131A 100%)
 
   .text-box
     padding: 30px 12px
@@ -283,7 +292,7 @@
         width: 100%
 
       .under-title
-        font-size: 16px
+        font-size: 15px
         line-height: 28px
         font-weight: 200
 
@@ -326,9 +335,12 @@
 
   .rankings__wrapper
     width: calc(100% - 24px)
+    margin-bottom: 24px
 
   .rankings__item
     margin-bottom: 32px
+    &:last-child
+      margin-bottom: 0
 
   .rankings__item-num-block
     order: 1
@@ -346,6 +358,10 @@
 
   .rankings__item-header
     margin-left: 0
+
+  .graph__wrapper
+    margin-left: 12px
+    margin-right: 12px
 
   .methodology-content
     flex-direction: column
@@ -368,7 +384,7 @@
       transform: translateX(-50%)
 
   .btn-container
-    margin: 24px 12px 0 12px
+    margin: 4px 12px 0 12px
 
   .btn-main
     width: 100%
@@ -378,6 +394,27 @@
     text-align: center
     &:after
       display: none
+
+  .map-btn
+    width: 122px
+    height: 48px
+    padding: 11px
+
+  .map-btn__text
+    font-size: 10px
+
+  .map-btn__container--share
+    top: 45px
+
+  .map-btn__container--embed
+    top: 45px
+
+  .map-btn__embed
+    width: 226px
+
+  .map__user-block
+    justify-content: center
+    margin-top: 12px
 
   .methodology-img
     margin-right: 0
@@ -451,12 +488,6 @@
     text-overflow: ellipsis
     vertical-align: top
 
-  .main-article--table
-    .breadcrumbs__item
-      &:nth-child(3)
-        overflow: hidden
-        min-width: 90px
-
   .mobile-table
     width: 100%
     margin-bottom: 16px
@@ -516,3 +547,14 @@
   .map-container__zoom
     display: none
 
+  .graph-img__mobile-only
+    display: block
+
+@media (max-width: 494px)
+  .main-pic
+    background-size: contain
+    background-position: top
+
+  .main-pic__mask
+    height: 405px
+    background-image: linear-gradient(-179deg, rgba(0,0,0,0.00) 25%, rgba(1,4,5,0.90) 46%, #05131A 100%)
