--- a/src/styl/_table.styl
+++ b/src/styl/_table.styl
@@ -1,5 +1,28 @@
 @import "_variable.styl"
 
+.text-box--table
+  .breadcrumbs
+    &__wrap
+      width: auto
+      margin-bottom: 45px
+      box-shadow: none
+
+    &__link
+      color: $main_color
+      letter-spacing: 0
+      line-height: 42px
+      text-decoration: underline
+      $ultraThin()
+      &:hover
+        text-decoration none
+        text-decoration-color: #A3DCF0
+
+    &__item
+      &:nth-child(3),
+      &:last-child
+        overflow: hidden
+        text-overflow: ellipsis
+
 .ranking-table
   width: 100%
   border-collapse: collapse
@@ -52,40 +75,220 @@
   .block-title
     margin-bottom: 45px
 
-.breadcrumbs
-  &__wrap
-    width: auto
-    margin-bottom: 45px
-    box-shadow: none
-
-  &__link
-    color: $main_color
-    letter-spacing: 0
-    line-height: 42px
-    text-decoration: none
-    $ultraThin()
-    &:hover
-      text-decoration underline
-      text-decoration-color: #A3DCF0
-
-  &__item
-    &:nth-child(3),
-    &:last-child
-      overflow: hidden
-      text-overflow: ellipsis
-
 .ranking-table
-  background: linear-gradient(90deg,#1c97ed 0,#43ccf8 100%)
+  background: linear-gradient(90deg, #FD5E56 3%, #E23C33 100%)
 
 .text-box--g-table
   .ranking-table
     background-image: linear-gradient(-90deg, #FD5E56 3%, #E23C33 100%)
 
   .ranking-table.ranking-table--fixed
-    background-image: linear-gradient(-90deg, #E93F38 3%, #E23C33 100%)
+    background-image: linear-gradient(-90deg, #E33D34 3%, #E43E35 100%)
 
   .rate-block
-    background-image: linear-gradient(-90deg, #FD5E56 3%, #E23C33 100%)
+    background: #FC6960
+  tr
+    &:nth-child(2)
+      .rate-block
+        background: #FC6D5C
+
+    &:nth-child(3)
+      .rate-block
+        background: #FC7159
+
+    &:nth-child(4)
+      .rate-block
+        background: #FC7456
+
+    &:nth-child(5)
+      .rate-block
+        background: #FC7853
+
+    &:nth-child(6)
+      .rate-block
+        background: #FC7B51
+
+    &:nth-child(7)
+      .rate-block
+        background: #FD7F4E
+
+    &:nth-child(8)
+      .rate-block
+        background: #FD834B
+
+    &:nth-child(9)
+      .rate-block
+        background: #FD8748
+
+    &:nth-child(10)
+      .rate-block
+        background: #FE8C45
+
+    &:nth-child(11)
+      .rate-block
+        background: #FE8F43
+
+    &:nth-child(12)
+      .rate-block
+        background: #FD9240
+
+    &:nth-child(13)
+      .rate-block
+        background: #FE963E
+
+    &:nth-child(14)
+      .rate-block
+        background: #FE993A
+
+    &:nth-child(15)
+      .rate-block
+        background: #FE9D37
+
+    &:nth-child(16)
+      .rate-block
+        background: #FEA134
+
+    &:nth-child(17)
+      .rate-block
+        background: #FEA531
+
+    &:nth-child(18)
+      .rate-block
+        background: #FEA92E
+
+    &:nth-child(19)
+      .rate-block
+        background: #FEAC2C
+
+    &:nth-child(20)
+      .rate-block
+        background: #FEAF29
+
+    &:nth-child(21)
+      .rate-block
+        background: #FFB426
+
+    &:nth-child(22)
+      .rate-block
+        background: #FEB822
+
+    &:nth-child(23)
+      .rate-block
+        background: #FEBB20
+
+    &:nth-child(24)
+      .rate-block
+        background: #FFBF1D
+
+    &:nth-child(25)
+      .rate-block
+        background: #FFC21B
+
+    &:nth-child(26)
+      .rate-block
+        background: #FFC618
+
+    &:nth-child(27)
+      .rate-block
+        background: #F8C61E
+
+    &:nth-child(28)
+      .rate-block
+        background: #F1C624
+
+    &:nth-child(29)
+      .rate-block
+        background: #EAC529
+
+    &:nth-child(30)
+      .rate-block
+        background: #E2C430
+
+    &:nth-child(31)
+      .rate-block
+        background: #DAC437
+
+    &:nth-child(32)
+      .rate-block
+        background: #D3C33E
+
+    &:nth-child(33)
+      .rate-block
+        background: #CBC245
+
+    &:nth-child(34)
+      .rate-block
+        background: #C3C14A
+
+    &:nth-child(35)
+      .rate-block
+        background: #BCC151
+
+    &:nth-child(36)
+      .rate-block
+        background: #B3C059
+
+    &:nth-child(37)
+      .rate-block
+        background: #ACBF5F
+
+    &:nth-child(38)
+      .rate-block
+        background: #A4BE65
+
+    &:nth-child(39)
+      .rate-block
+        background: #9DBD6B
+
+    &:nth-child(40)
+      .rate-block
+        background: #96BD72
+
+    &:nth-child(41)
+      .rate-block
+        background: #8DBC7A
+
+    &:nth-child(42)
+      .rate-block
+        background: #87BC7F
+
+    &:nth-child(43)
+      .rate-block
+        background: #7EBB87
+
+    &:nth-child(44)
+      .rate-block
+        background: #77BA8E
+
+    &:nth-child(45)
+      .rate-block
+        background: #70BA93
+
+    &:nth-child(46)
+      .rate-block
+        background: #68B99A
+
+    &:nth-child(47)
+      .rate-block
+        background: #61B8A1
+
+    &:nth-child(48)
+      .rate-block
+        background: #5AB7A7
+
+    &:nth-child(49)
+      .rate-block
+        background: #51B7AF
+
+    &:nth-child(50)
+      .rate-block
+        background: #49B5B4
+
+    &:nth-child(51)
+      .rate-block
+        background: #42B5BA
+
+
 
   tbody
     tr
@@ -150,18 +353,31 @@
 .mobile-only
   display: none
 
-.cell-with-icon
-  &:before
-    content: ''
-    position: relative
-    top: 1px
-    display: inline-block
-    width: 11px
-    height: 11px
-    margin-right: 6px
-    background: url(images/svg/table-star.svg) center no-repeat
+@media (max-width: 1019px)
+  .text-box--table
+    .breadcrumbs__wrap
+      white-space: nowrap
+      max-width: 100%
+      box-sizing border-box
+
+  .ranking-table
+    thead
+      th
+        height: 56px
+        padding: 0 8px
+
+    tbody
+      td
+        padding: 0 8px
 
 @media (max-width: 779px)
+  .text-box--table
+    margin-bottom: 30px
+    .breadcrumbs__wrap
+      margin-bottom: 30px
+
+    .btn-container
+      margin-top: 24px
 
   .tables-container
     display: flex
