--- a/src/partials/grumpiest.jade
+++ b/src/partials/grumpiest.jade
@@ -64,7 +64,7 @@
         span.rate-block
           | 66.491
         h3.rankings__item-title
-          | Calofornia
+          | California
 
       .rankings__item-num-block
         p.rankings__item-num
