--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -503,17 +503,23 @@ ul,li
   &:last-child
     margin-right: 0
 
-  &:hover
-    background: #edf0f5
-
 .map-btn__socials-item--fb
   border: 1px solid #3d5e96
 
+  &:hover
+    background: #eaeef4
+
 .map-btn__socials-item--tw
-  border: 1px solid #46ADE9 46ade9
+  border: 1px solid #46ade9
+
+  &:hover
+    background: #e5f3fd
 
 .map-btn__socials-item--go
   border: 1px solid #fedfdd
+
+  &:hover
+    background: #feecec
 
 .map-btn__container--embed
   position: absolute
