--- a/src/partials/map-grumpy.jade
+++ b/src/partials/map-grumpy.jade
@@ -27,7 +27,7 @@
 
       .map-btn__container.map-btn__container--embed
         .map-btn__embed
-          p.map-btn__embed-text#copyTarget
+          textarea.map-btn__embed-text#copyTarget(autofocus='')
             | To arrive at these rankings, RewardExpert analyzed a data set of hotel reviews from TripAdvisor containing a total of 878,561 reviews of 4333 hotels nationwide. We removed all entries that either a) did not include a location for the reviewer, or b) had a non-US reviewer location, leaving 278,662 reviews. We took the reviews that had an overall rating of one or two (on a scale of one to five) as our “grumpy” data set.
 
           button.map-btn__embed-copy#copyButton
