--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -414,7 +414,7 @@
 
   .map__user-block
     justify-content: center
-    margin-top: 12px
+    margin-top: 0
 
   .methodology-img
     margin-right: 0
