--- a/src/partials/map-grumpy.jade
+++ b/src/partials/map-grumpy.jade
@@ -1,7 +1,9 @@
 .text-box.text-box--map.text-box--grumpiest
   h2.block-title Map of the Grumpiest and Happiest States
 
-  .map-wrapper#map-wrapper
+  //- .map-wrapper#map-wrapper
+  .frame-wrapper
+    iframe(src='https://static0.rewardexpert.com/shared/staging/grump-map/' width = "1130px", height = 'auto', frameborder="0", scrolling = "no")
 
   .map__user-block
     .map-btn__wrapper.map-btn__wrapper--share
@@ -28,7 +30,7 @@
       .map-btn__container.map-btn__container--embed
         .map-btn__embed
           textarea.map-btn__embed-text#copyTarget(autofocus='')
-            | To arrive at these rankings, RewardExpert analyzed a data set of hotel reviews from TripAdvisor containing a total of 878,561 reviews of 4333 hotels nationwide. We removed all entries that either a) did not include a location for the reviewer, or b) had a non-US reviewer location, leaving 278,662 reviews. We took the reviews that had an overall rating of one or two (on a scale of one to five) as our “grumpy” data set.
+            | <iframe src="https://static0.rewardexpert.com/shared/staging/grump-map/" width="1130px" height="auto" frameborder="0" scrolling="no"></iframe>
 
           button.map-btn__embed-copy#copyButton
             | copy to clipboard
