--- a/src/partials/map-grumpy.jade
+++ b/src/partials/map-grumpy.jade
@@ -1,9 +1,8 @@
 .text-box.text-box--map.text-box--grumpiest
   h2.block-title Map of the Grumpiest and Happiest States
 
-  //- .map-wrapper#map-wrapper
   .frame-wrapper
-    iframe(src='https://static0.rewardexpert.com/shared/staging/grump-map/' width = "1130px", height = 'auto', frameborder="0", scrolling = "no")
+    iframe(src='https://www.rewardexpert.com/shared/grump-map/' width = "904px" height = '560px' frameborder="0" scrolling="no")
 
   .map__user-block
     .map-btn__wrapper.map-btn__wrapper--share
@@ -30,7 +29,7 @@
       .map-btn__container.map-btn__container--embed
         .map-btn__embed
           textarea.map-btn__embed-text#copyTarget(autofocus='')
-            | <iframe src="https://static0.rewardexpert.com/shared/staging/grump-map/" width="1130px" height="auto" frameborder="0" scrolling="no"></iframe>
+            | <iframe src="https://www.rewardexpert.com/shared/grump-map/" width="904px" height="560px" frameborder="0" scrolling="no"></iframe>
 
           button.map-btn__embed-copy#copyButton
             | copy to clipboard
