--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -840,18 +840,16 @@ ul,li
 .map-btn__embed-text
   resize: none
 
-.frame-wrapper {
-  position:relative;
-  padding-bottom:62.4%;
-  padding-top:30px;
-  height:0;
-  overflow:hidden;
-}
+.frame-wrapper
+  position:relative
+  padding-bottom:60%
+  padding-top:30px
+  height:0
+  overflow:hidden
 
-.frame-wrapper iframe {
-  position:absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-}
+.frame-wrapper iframe
+  position:absolute
+  top:0
+  left:0
+  width:100%
+  height:100%
