--- a/src/styl/_media.styl
+++ b/src/styl/_media.styl
@@ -550,6 +550,13 @@
   .graph-img__mobile-only
     display: block
 
+  .frame-wrapper
+    padding-bottom: 66%
+
+@media (max-width: 567px)
+  .frame-wrapper
+    padding-bottom: 70%
+
 @media (max-width: 494px)
   .main-pic
     background-size: contain
