--- a/src/styl/_style.styl
+++ b/src/styl/_style.styl
@@ -436,7 +436,10 @@ ul,li
   background: #ffffff
 
   &:hover
-    background: #fedfdd
+    background: rgba(254,223,221,1)
+
+  &:active
+    background: rgba(255,255,255,1)
 
     .map-btn__text
       border-bottom: 1px solid transparent
@@ -577,6 +580,9 @@ ul,li
   margin: 0 auto
   &:hover
     background: rgba(252, 104, 96, .85)
+
+  &:active
+    background: #fc6860
 
 .map-btn__text
   font-size: 12px
@@ -842,7 +848,7 @@ ul,li
 
 .frame-wrapper
   position:relative
-  padding-bottom:60%
+  padding-bottom:64%
   padding-top:30px
   height:0
   overflow:hidden
